# MKEA

./: Cargo.toml  arm32_core.rs
crates/mkea-cli/: Cargo.toml
crates/mkea-cli/examples/: tap_menu.jsonl
crates/mkea-cli/src/: args.rs  config_builder.rs  lib.rs  live.rs  main.rs  phase.rs
crates/mkea-core/: Cargo.toml
crates/mkea-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/mkea-core/src/runtime/: bootstrap.rs  control.rs  diagnostics.rs  engine.rs  framebus.rs  inputbus.rs  memory.rs  mod.rs  profiles.rs  render.rs  stubs.rs  synthetic.rs  telemetry.rs
crates/mkea-core/src/runtime/backend/: dryrun.rs  memory.rs  mod.rs  unicorn.rs
crates/mkea-core/src/runtime/backend/memory/: cocos_runtime.rs  dispatch_uikit.rs  fs_state.rs  gles1_soft.rs  host_audio.rs  host_input.rs  host_input_state.rs  objc_runtime.rs  objc_state.rs  scheduler_action_runtime.rs  scheduler_invocation_runtime.rs  scheduler_runloop.rs  scheduler_service.rs  scheduler_state.rs  scheduler_timer_runtime.rs  shared.rs  state.rs  uikit.rs  uikit_cocos_helpers.rs  uikit_cocos_state.rs  uikit_graphics_helpers.rs  uikit_graphics_state.rs  uikit_network_runloop.rs  uikit_network_state.rs  uikit_objects_state.rs  uikit_runtime_state.rs  uikit_state.rs
crates/mkea-core/src/runtime/backend/memory/cpu/: arm32_core.rs  dispatch_cocos.rs  dispatch_graphics.rs  dispatch_network.rs  dispatch_uikit.rs  vfp.rs
crates/mkea-core/src/runtime/profiles/: above_and_below.rs  default.rs
crates/mkea-launcher/: Cargo.toml  README.md
crates/mkea-launcher/src/: main.rs  storage.rs
crates/mkea-loader/: Cargo.toml
crates/mkea-loader/src/: ipa.rs  lib.rs  macho.rs  manifest.rs
