[workspace]
members = [
    "crates/mkea-cli",
    "crates/mkea-core",
    "crates/mkea-loader",
    "crates/mkea-launcher",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
png = "0.17"
flate2 = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
plist = "1"
object = { version = "0.36", default-features = false, features = ["read_core", "macho"] }
unicorn-engine = "2"
minifb = "0.25"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
