[package]
name = "mkea-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
png.workspace = true
minifb.workspace = true
mkea-core = { path = "../mkea-core", features = ["unicorn"] }
mkea-loader = { path = "../mkea-loader" }
