[package]
name = "mkea-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
mkea-loader = { path = "../mkea-loader" }
eframe = { version = "0.29", default-features = true }
egui = "0.29"
rfd = "0.15"
dirs = "5"
